# Mission-Control

./: .gitignore  package-lock.json  planning_website.md  run_local.ps1  website_implemnt.md  woodpecker.txt
.agents/: AGENTS.md
.github/: dependabot.yml
.github/workflows/: dependabot-automerge.yml
.woodpecker/: release.yml
.woodpecker/scripts/: build_nsis.ps1  compile_backend.ps1  install_backend.ps1  move_backend.ps1  publish_release.ps1  stamp_version.ps1
Gaming/: package-lock.json  readme.md  test_optimization.py
Gaming/backend/: .gitignore  MissionControl.spec  main.py  patch_decision_maker.py  patch_layer1.py  patch_pipeline_host.py  pyproject.toml  requirements.txt  sqlalchemy-2.0.50-cp314-cp314-win_amd64.whl  version.json
Gaming/backend/ai_brain/: core_optimization_engine.py  decision_maker.py  feedback_loop.py  game_knowledge.py  memory.py  rag_engine.py  web_search.py
Gaming/backend/capture/: screen.py
Gaming/backend/chroma_db/: chroma.sqlite3
Gaming/backend/config/: .uuid_lock  games_db.json  readiness_cache.json
Gaming/backend/control/: commands.py  handler.py  input_manager.py
Gaming/backend/core/: bridge_server.py  config_loader.py  pipeline_host.py  runtime_helpers.py  state_models.py  updater_bridge.py
Gaming/backend/fps_counter/: compile_fps_counter.bat  fps_counter.cpp
Gaming/backend/handlers/: __init__.py  chat_handler.py  system_handler.py
Gaming/backend/nvidia/: capabilities.py  gpu_monitor.py
Gaming/backend/rag_data/: pcgw_features.db
Gaming/backend/scratch/: check_gpu.py  create_xp_table_db.py  diagnose_tags.py  inspect_chat_history.py  inspect_db.py  inspect_mem0.py  inspect_raw_mem0.py  lhm_dump.txt  lhm_dump_utf8.txt  test_mem0_fix.py  test_mem0_live.py  test_nim.py  test_pcgw.py  test_urls.py  verify_mem_fix.py
Gaming/backend/system/: config_watcher.py  db_manager.py  game_scanner.py  optimizer.py  preset_comparator.py
Gaming/backend/system/advisor/: engine.py
Gaming/backend/system/advisor/analyzers/: memory.py
Gaming/backend/system/hardware_monitor/: Program.cs
Gaming/backend/tests/: __init__.py  test_agent_memory_comprehensive.py  test_performance_intelligence.py  test_process_watcher.py  test_rag_offline.py  test_secure_crypt.py  test_supabase.py  test_updater_bridge.py
Gaming/backend/tests/fixtures/: scanner_results_test.json
Gaming/backend/tests/temp_test_data/: test_db_1780818506194.db  test_db_1780818506226.db  test_db_1780895609374.db  test_db_1781151320071.db  test_db_1781151464526.db  test_db_1781151466563.db  test_db_1781152236808.db  test_db_1781153133404.db  test_db_1781154966117.db  test_db_1781155632645.db  test_db_1781156887159.db  test_db_1781158570345.db  test_db_1781161464878.db  test_db_1781161754612.db  test_db_1781273880242.db  test_db_1781537162708.db  test_db_1781537164668.db  test_db_1781537273561.db  test_db_1781610948202.db  test_db_1781611984444.db  test_db_1781612082828.db  test_db_1781616040077.db  test_db_1781679272517.db  test_db_1781679371029.db  test_db_1781680026071.db  test_db_1781695436129.db  test_db_1781695437452.db  test_db_1781695560560.db  test_db_1781696158169.db  test_db_1781696159400.db  test_db_1781696406559.db  test_db_1782045902758.db  test_db_1782045903969.db  test_db_1782136221773.db  test_db_1782136225208.db  test_db_1782136413618.db  test_db_1782226656230.db  test_db_1782227279480.db  test_db_1782228037309.db  test_db_1782228038719.db  (+17 more)
Gaming/backend/tests/temp_test_data/rag_index/: chroma.sqlite3
Gaming/backend/vision/: ocr_reader.py  simple_rules.py
Gaming/backend/voice/: voice_manager.py
Gaming/docs/: AGENTIC_LOGIC.md  DESIGN.md  ElectronRoadmap.md  FPS.md  NVIDIA.md  ProductRoadmap.md  SUMMARY.md  agents.md  (+6 more)
data/: agent_memory.db  agent_memory.db-shm  agent_memory.db-wal
supabase/: config.toml
(+422 files in other folders)
