[project]
name = "ai-gaming-assistant"
version = "1.1.6"
requires-python = ">=3.11"
dependencies = [
    "opencv-python",
    "numpy",
    "mss",
    "pyautogui",
    "pynput",
    "pyyaml",
    "ultralytics",
    "dxcam",
    "easyocr",
    "torchao",
    "torch",
    "torchvision",
    "torchaudio",
    "pygame-ce",
    "nvidia-ml-py",
    "pyttsx3",
    "SpeechRecognition",
    "psutil",
    "orjson",
    "pydantic",
    "packaging",
    "python-dotenv",
    "openai",
    "pyaudio",
    "tavily-python",
    "duckduckgo-search",
    "websockets>=16.0",
    "wmi>=1.5.1",
    "pywin32",
    "requests",
    "psycopg2-binary>=2.9.9",
    "langchain",
    "langchain-community",
    "langchain-nvidia-ai-endpoints",
    "langchain-text-splitters",
    "faiss-cpu",
    "chromadb>=0.5.0",
    "rank_bm25",
    "tiktoken",
    "emoji>=2.15.0",
    "mem0ai",
    "ddgs>=9.14.4",
    "httpx>=0.28.1",
]

[tool.uv]
system-certs = true
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'"
]
exclude-dependencies = ["opencv-python-headless"]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["scratch"]

