[project]
name = "ai-gaming-assistant"
version = "2.1.8"
requires-python = ">=3.11"
dependencies = [
    "opencv-python",
    "numpy",
    "mss",
    "pyautogui",
    "pynput",
    "pyyaml",
    "dxcam",
    "rapidocr-onnxruntime",
    "pygame-ce",
    "nvidia-ml-py",
    "pyttsx3",
    "SpeechRecognition",
    "psutil",
    "orjson",
    "pydantic",
    "packaging",
    "python-dotenv",
    "openai",
    "pyaudio",
    "tavily-python",
    "duckduckgo-search",
    "websockets>=16.1.1",
    "wmi>=1.5.1",
    "pywin32",
    "requests",
    "psycopg2-binary>=2.9.9",
    "langchain",
    "langchain-community",
    "langchain-nvidia-ai-endpoints",
    "langchain-text-splitters",
    "faiss-cpu",
    "rank_bm25",
    "tiktoken",
    "emoji>=2.15.0",
    "mem0ai",
    "ddgs>=9.14.4",
    "httpx>=0.28.1",
    "ultralytics",
]

[tool.uv]
system-certs = true
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'"
]
exclude-dependencies = ["opencv-python-headless"]

[tool.uv.sources]



[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["scratch"]

